@startuml sprotyvmap
skinparam linetype ortho
package sprotyvmap
{
    package Shared
    {
        package Abstractions
        {
            hide fields
            interface IDataProvider
            {
                GetEquipmentCentreAsync()
                GetAllDistrictsAsync()
            }
            interface IMapPointProvider
            {
                GetPointAsync()
            }
        }
        package Primitives
        {
            hide methods
            struct District
            {
                +Id
                +Name
                +EquipmentCentres
            }
            struct EquipmentCentre
            {
                +Title
                +Information
                +Location
                +Point
            }
            struct MapPoint
            {
                +Latitude
                +Longitude
            }
        }
        District *- EquipmentCentre
        EquipmentCentre o- MapPoint
        Abstractions --> Primitives

    }
    package SprotyvInUaScraper
    {
        class WebScraper
        {
            -httpClient
            +{static}Create()
            +LoadDataAsync()
            +GetAllDistricts()
            +GetEquipmentCentres()
            +GetEquipmentCentre()
        }
        IDataProvider <|. WebScraper 
        WebScraper -> Primitives
        class XPathBuilder
        {
            {static} DistrictNameXPath
            {static} EquipmentCentreName
            {static} EquipmentCentreInfo
            {static} EquipmentCentreLocation
            {static} EquipmentCentreData
            {static} DistrictXPath
            {static} AllDistrictsXPath
        }
        hide XPathBuilder methods
        WebScraper --> XPathBuilder
    }
    package WebApp
    {

        package Services
        {
            interface IEquipmentCentreProvider
            {
                GetDistrictsAsync()
            }
            class ApiEquipmentCentreProvider implements IEquipmentCentreProvider
            {
                -httpClient
                +GetDistrictsAsync()
            }
        }
        package Pages
        {
            class About
            {
            }
            hide About members
            class Main
            {
                -Map
            }
            hide Main methods
        }
        IEquipmentCentreProvider <-- Main
    }
    package WebService
    {
        package Workers
        {
            class CacheSignal<T>
            {
                +WaitAsync()
                +Release()
            }
            hide CacheSignal fields

            class DistrictsCacheWorker
            {
                -service
                -cacheSignal
                -memoryCache
                -logger
                +StartAsync()
                #ExecuteAsync()
            }
            DistrictsCacheWorker o-- CacheSignal
        }
        package Controllers
        {
            class DistrictsController
            {
                -equipmentCentreService
                +Get() | api/Districts
                +GetCentre() | api/Districts/{}/centre/{}
            }
        }
        package Providers
        {
            class VisicomMapPointProvider 
            {
                -httpClient
                -requestOptions
                -logger
                +GetPointAsync()
            }
            IMapPointProvider <|.. VisicomMapPointProvider 
        }
        package Services
        {
            interface IEquipmentCentreService
            {
                GetDistrictsAsync()
                GetEquipmentCentreAsync()
            }
            IEquipmentCentreService --o DistrictsController
            DistrictsCacheWorker o-up- IEquipmentCentreService
            class VisicomEquipmentCentreService implements IEquipmentCentreService
            {
                -dataProvider
                -mapPointProvider
                +GetDistrictsAsync()
                +GetEquipmentCentreAsync()
            }
            class CachedEquipmentCentreService implements IEquipmentCentreService
            {
                -cache
                -cacheSignal
                -logger
                +GetDistrictsAsync()
                +GetEquipmentCentreAsync()
            }
            Abstractions <-- VisicomEquipmentCentreService
            ' IDataProvider <-- VisicomEquipmentCentreService
            ' IMapPointProvider <-- VisicomEquipmentCentreService
            CachedEquipmentCentreService -> CacheSignal
        }

    }
}
set separator none
package Visicom.DataApi.Geocoder
{
    package Visicom.DataApi.Abstractions
    {
        interface IGeocoder
        {
            SetOptions()
            GetCoordinates()
            GetCoordinatesAsync()
        }
        interface IRequestOptions
        {
            ApiKey
            Language
            Categories
            ExcludeCategories
            Text
            WordText
            Near
            NearRadius
            Order
            IntersectionArea
            ContainsArea
            Zoom
            Limit
            CountryCode
            CountryCodePriority
        }
    }
    package Data
    {
        hide members
        struct Response
        struct Properties
        struct GeoCentroid
        struct Coordinates
        Response o-- GeoCentroid
        Response o-- Properties
        GeoCentroid o-- Coordinates
    }
    package Enums
    {
        hide methods
        enum Categories
        {
            ItService,
            Cemetery,
            Prisons...
        }
        enum Languages
        {
            Ukrainian,
            English,
            Russian
        }
        enum Order
        {
            Relevance,
            Distance
        }
    }
    class BasicGeocoder implements IGeocoder
    {
        -requestOptions
        -httpClient
        +SetOptions()
        +GetCoordinates()
        +GetCoordinatesAsync()
    }
    class RequestOptions implements IRequestOptions
    {
        ... see IRequestOptions ...
    }
    RequestOptions o-- Enums
    BasicGeocoder --> Data
    IRequestOptions -o BasicGeocoder
    VisicomMapPointProvider -up-|> BasicGeocoder
}

@enduml